--- a/StoresFIS/src/main/resources/application.properties
+++ b/StoresFIS/src/main/resources/application.properties
@@ -15,3 +15,6 @@ management.port=8081
 # disable all management endpoints except health
 endpoints.enabled = false
 endpoints.health.enabled = true
+
+# cxf endpoint address
+cxf.endpoint.soap = http://stores-soap:8080
