--- a/CoolStore/coolstore-template.yml
+++ b/CoolStore/coolstore-template.yml
@@ -291,7 +291,7 @@ objects:
           value: ${MAVEN_MIRROR_URL}
         from:
           kind: ImageStreamTag
-          name: jboss-webserver31-tomcat8-openshift:1.0
+          name: jboss-webserver30-tomcat8-openshift:latest
           namespace: ${IMAGE_STREAM_NAMESPACE}
       type: Source
     triggers:
