--- a/CoolStore/coolstore-catalog-mongodb-persistent.yaml
+++ b/CoolStore/coolstore-catalog-mongodb-persistent.yaml
@@ -211,7 +211,7 @@ objects:
 
 # #######   CATALOG SERVICE     ############
 
-- apiVersion: extensions/v1beta1
+- apiVersion: apps/v1
   kind: Deployment
   metadata:
     labels:
