--- a/CoolStore/coolstore-catalog-mongodb-persistent.yaml
+++ b/CoolStore/coolstore-catalog-mongodb-persistent.yaml
@@ -307,7 +307,8 @@ objects:
     - port: 8080
       targetPort: 8080
     selector:
-      deployment: catalog-service
+      matchLabels:
+        deployment: catalog-service
     sessionAffinity: None
     type: ClusterIP
 
