--- a/CoolStore/coolstore-catalog-mongodb-persistent.yaml
+++ b/CoolStore/coolstore-catalog-mongodb-persistent.yaml
@@ -215,8 +215,8 @@ objects:
   kind: Deployment
   metadata:
     labels:
-      application: catalog-service
-    name: catalog-service
+      application: ${CATALOG_SERVICE_NAME}
+    name: ${CATALOG_SERVICE_NAME}
   spec:
     # JA Bride:  setting all DCs to paused.  Will then start each one via ansible
     paused: true
@@ -306,7 +306,7 @@ objects:
       targetPort: 8080
     selector:
       matchLabels:
-        application: catalog-service
+        application: ${CATALOG_SERVICE_NAME}
     sessionAffinity: None
     type: ClusterIP
 
@@ -314,6 +314,7 @@ objects:
   kind: Route
   metadata:
     labels:
+      name: ${CATALOG_SERVICE_NAME}
       application: ${CATALOG_SERVICE_NAME}
     name: catalog-unsecured
   spec:
